# wild-bind-debugito

./: ChangeLog.md  README.md  cabal.project.freeze  stack.yaml  wild-bind-debugito.cabal
app/: Main.hs
freezes/: 20221109-ghc-8.10.7.freeze  20241211-xubuntu-24.04-ghc-9.2.5.freeze
src/WildBind/: DebugIto.hs
src/WildBind/DebugIto/: Main.hs
test/WildBind/: DebugItoSpec.hs
