name:                   wild-bind-debugito
version:                0.3.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               debugito's WildBind Bindings
description:            debugito's WildBind Bindings
category:               WildBind
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md
homepage:               https://github.com/debug-ito/wild-bind-debugito
bug-reports:            https://github.com/debug-ito/wild-bind-debugito/issues

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  default-extensions:   OverloadedStrings
  other-extensions:     FlexibleContexts, PartialTypeSignatures
  exposed-modules:      WildBind.DebugIto,
                        WildBind.DebugIto.Main
  -- other-modules:        
  build-depends:        base,
                        process,
                        mtl,
                        wild-bind >=0.1.1.0 && <0.2,
                        wild-bind-x11 >=0.2.0.0 && <0.3,
                        wild-bind-indicator >=0.2.0.0 && <1.1,
                        text

executable wild-bind-debugito
  default-language:     Haskell2010
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -Wall -fno-warn-unused-imports -threaded
  -- other-modules:        
  -- default-extensions:   
  -- other-extensions:     
  build-depends:        base, wild-bind-debugito
                        

-- test-suite spec
--   type:                 exitcode-stdio-1.0
--   default-language:     Haskell2010
--   hs-source-dirs:       test
--   ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
--   main-is:              Spec.hs
--   -- default-extensions:   
--   -- other-extensions:     
--   other-modules:        WildBind.DebugItoSpec
--   build-depends:        base, wild-bind-debugito,
--                         hspec

source-repository head
  type:                 git
  location:             https://github.com/debug-ito/wild-bind-debugito.git
